out/taco_csr_err.txt
/tmp/taco_tmp_WDmZkN/qyix7mt8kaz9.c: In function ‘assemble’:
/tmp/taco_tmp_WDmZkN/qyix7mt8kaz9.c:62:11: error: ‘A21_pos_size’ undeclared (first use in this function); did you mean ‘A21_crd_size’?
       if (A21_pos_size <= pA21) {
           ^~~~~~~~~~~~
           A21_crd_size
/tmp/taco_tmp_WDmZkN/qyix7mt8kaz9.c:62:11: note: each undeclared identifier is reported only once for each function it appears in
/tmp/taco_tmp_WDmZkN/qyix7mt8kaz9.c: In function ‘compute’:
/tmp/taco_tmp_WDmZkN/qyix7mt8kaz9.c:96:7: error: ‘pA21’ undeclared (first use in this function); did you mean ‘pA22’?
       pA21++;
       ^~~~
       pA22
/tmp/taco_tmp_WDmZkN/qyix7mt8kaz9.c:97:11: error: ‘A21_pos_size’ undeclared (first use in this function); did you mean ‘A21_pos’?
       if (A21_pos_size <= pA21) {
           ^~~~~~~~~~~~
           A21_pos
Error at /home/edavis/Work/PolyhedralDataflowIR/lib/taco/src/codegen/module.cpp:154 in compile:
 Compilation command failed:
cc -O3 -ffast-math -std=c99 -shared -fPIC -fopenmp /tmp/taco_tmp_WDmZkN/qyix7mt8kaz9.c  -o /tmp/taco_tmp_WDmZkN/qyix7mt8kaz9.so -lm
returned 256
Signal: SIGABRT (Aborted)

